# Utils

./: README.md  buff_test.vim  from_vimrc_to_remote.sh  from_webserver_to_remote.sh  test_func.vim  to_vimrc.sh  to_webserv.sh  vimrc_dev  vimrc_dev1  vimrc_dev_simple
cmds/: am_build.bat  am_checkout_build.bat  am_cmd.bat  am_gen.bat  am_gen_rel.bat  am_generate_build_debug.bat  am_git_command.bat  am_pull_merge_build.bat  am_run_vs2013.bat  ch_cmd.bat  last_product.bat  sublime_init_terminal.bat  sublp.bat  test.bat  vscmd.bat
conf/: .bashrc  .vimrc
projects/imgs/: Makefile  pyproject.toml
projects/imgs/src/imgs/conv_imgs/: __main__.py  task.txt
projects/imgs/src/imgs/utils/: dir_names.py
projects/imgs/tests/: test_dir_names.py
second/: .index.html.swp  index.html
second/css/: styles.css
second/second/: .index.html.swp  index.html
smrwork/: .astylerc  .bashrc  .gitconfig  .vimrc
tutor/: index.html  info.txt  main.js  styles.css
