[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.5.1"]

[tool.poetry]
name = "imgs"
description = "imgs"
authors = ["Nikolay"]
version = "0.0"
readme = "README.md"
#repository = "https://gitlab.corp.mail.ru/voice/platform/backend/auto-markup-bot"
packages = [
    { include = "imgs", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
isort = "*"
flake8 = "*"
flake8-print = "*"
flake8-isort = "*"
flake8-pyproject = "*"
black = "*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[tool.flake8]
max-line-length = 100
extend_ignore = ["W606", "E203"]
